# hack-assembler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  IR.h  encoding.c  encoding.h  hash.c  hash.h  main.c  parsing.c  parsing.h  symbols.c  symbols.h  translate.c  translate.h  utils.c  utils.h
src/parsing/: a_instruction.c  c_instruction.c  internal.h  label_declaration.c  parsing.c  parsing.h
src/test/: CMakeLists.txt  test_encoding.c  test_hash.c  test_parsing.c  test_symbols.c  test_utils.c
src/test/functional/: fill.asm  fill.hack.expected  mult.asm  mult.hack.expected  run.sh
